@@ -12,7 +12,46 @@
 #include <iostream>
 
 
+#ifdef FOST_OS_WINDOWS
+    #define COUT std::wcout
+#else
+    #define COUT std::cout
+#endif
+
+
 namespace {
+    struct disp {
+        typedef void result_type;
+        template<typename T>
+        void operator () (const T &t) const {
+            COUT << ' ' << t << '\n' << std::endl;
+        }
+        void operator () (const fostlib::string &s) const {
+            COUT << s << std::endl;
+        }
+        void operator () (const fostlib::json::object_t &o) const {
+            if ( o.find("") != o.end() ) {
+                fostlib::json copy = o;
+                fostlib::string m = fostlib::coerce<fostlib::string>(copy[""]);
+                fostlib::jcursor("").del_key(copy);
+                COUT << ' ' << m << '\n' << copy << std::endl;
+            } else {
+                COUT << '\n' << o << std::endl;
+            }
+        }
+        void operator () (const fostlib::json::array_t &a) const {
+            if ( a.size() > 0 && a[0]->isatom() ) {
+                COUT << ' ' << fostlib::coerce<fostlib::string>(*a[0]) << '\n';
+                for ( std::size_t i(1); i != a.size(); ++i ) {
+                    COUT << *a[i] << '\n';
+                }
+                COUT << std::endl;
+            } else {
+                COUT << '\n' << a << std::endl;
+            }
+        }
+    };
+
     class ostream_logger {
         const std::size_t log_level;
         const bool colour;
@@ -25,18 +64,13 @@ namespace {
                         conf["color"]).value(false)) {
             }
             bool operator () ( const fostlib::log::message &m ) {
-#ifdef FOST_OS_WINDOWS
-    #define COUT std::wcout
-#else
-    #define COUT std::cout
-#endif
                 if ( colour ) {
                     if ( m.level() <= fostlib::log::debug_level_tag::level() ) {
                         COUT << "\33[0;37m";
                     } else if ( m.level() <= fostlib::log::info_level_tag::level() ) {
                         COUT << "\33[0;32m";
                     } else if ( m.level() <= fostlib::log::warning_level_tag::level() ) {
-                        COUT << "\33[0;33m";
+                        COUT << "\33[1;33m";
                     } else if ( m.level() <= fostlib::log::error_level_tag::level() ) {
                         COUT << "\33[0;31m";
                     } else {
@@ -48,7 +82,12 @@ namespace {
                     if ( !m.module().isnull() ) {
                         COUT<< " " << m.module().value();
                     }
-                    COUT<< '\n' << m.body() << std::endl;
+                    if ( colour ) {
+                        disp d;
+                        m.body().apply_visitor(d);
+                    } else {
+                        COUT<< '\n' << m.body() << std::endl;
+                    }
                 }
                 if ( colour ) {
                     COUT << "\33[0;39m";
